<resources>
    <string name="app_name">My GYM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">ثبت نام</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_bodifa">ورود به بادیفا</string>
    <string name="email_hint">ایمیل...</string>
    <string name="password">رمز عبور</string>
    <string name="not_registered_yet">هنوز در بادیفا ثبت نام نکرده اید؟</string>
    <string name="register">ثبت نام</string>
    <string name="user_account">حساب کاربری</string>
    <string name="register_in_bodyfa">عضویت در بادیفا</string>
    <string name="agree_licence">شرایط را خوانده و قوانین را قبول دارم</string>
    <string name="foodNews">اخبار تغذیه</string>
    <string name="fitnessNews">اخبار ورزشی</string>
    <string name="demoText">خون را پایین آورده و کلسترول خوب خون را بالا میبرد . گردو باعث محافظت از پوست ، استحکام استخوان ، تنظیم متابولیسم بدن ، تقویت هوش و حافظه ، درمان کننده درد مفاصل ، تقویت کننده سیستم ایمنی بدن</string>
    <string name="most_point">بیشترین امتیاز</string>
    <string name="most_awards">بیشترین مقام</string>
    <string name="by_city">بر اساس شهر</string>
    <string name="title_activity_athlete_main">AthleteMainActivity</string>
    <string name="show">نمایش</string>
    <string name="general">عمومی</string>
    <string name="vip">اختصاصی</string>
    <string name="main_page">صفحه اصلی</string>
    <string name="FAQ">سوالات متداول</string>
    <string name="EULA">سیاست حفظ حریم خصوصی</string>
    <string name="contact_us">تماس با ما</string>
    <string name="title_activity_profile_trained">مربی</string>
    <string name="gym">باشگاه</string>
    <string name="title_activity_news_detail">شرح خبر</string>
    <string name="title_activity_edit_profile">ویرایش نمایه کاربر</string>
    <string name="userComments">نظرات کاربران (%1d نظر)</string>
    <string name="title_activity_post_content">PostContentActivity</string>
    <string name="send_content">ارسال مطلب</string>
</resources>
