<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.arsalan.mygym.fragments.RegisterFragment">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:text="@string/user_account"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="TextView" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:gravity="center"
                    android:text="@string/register_in_bodyfa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:text="خانم" />

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:text="آقای" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="نام و نام خانوادگی..."
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="تاریخ تولد:"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spDateDay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spDateMont"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spDateYear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@color/gray_light"
                        android:drawablePadding="8dp"
                        android:drawableRight="@drawable/ic_email_24dp"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:hint="وزن..."
                        android:inputType="numberDecimal"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:text="Kg"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="استان:"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/spProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="شهر:"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/spCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="آدرس..."
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:enabled="false"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="تلفن ثابت..."
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="اعتبار سنجی از طریق:"
                    android:textSize="10sp" />

                <RadioGroup
                    android:id="@+id/rgEmailMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="ایمیل" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray_light"
                        android:drawablePadding="8dp"
                        android:drawableRight="@drawable/ic_email_24dp"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:hint="ایمیل..."
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rbMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:text="تلفن همراه" />

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray_light"
                        android:drawablePadding="8dp"
                        android:drawableRight="@drawable/ic_email_24dp"
                        android:enabled="false"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:hint="تلفن همراه..."
                        android:inputType="numberDecimal"
                        android:padding="8dp"
                        android:textSize="14sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="نام کاربری..."
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp"

                    />
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="رمز عبور..."
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp"

                    />

                <EditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_light"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_email_24dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:hint="تکرار رمز عبور..."
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp"

                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_licence" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/green_rect_back"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:text="قبلا ثبت نام کرده ام. " />

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:fontFamily="@font/iran_sans_mobile"
                        android:text="@string/login_to_bodifa"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>


</LinearLayout>
